add Emulator installation